--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -9,8 +9,8 @@
 
 .navbar-inverse a.navbar-brand {
   font-family: "Helvetica Neue", Helvetica;
-  font-weight: 100;
-  color: white;
+  font-weight: 200;
+  color: black;
 }
 
 .hero {
@@ -80,6 +80,11 @@ body {
   padding: 2px 8px 2px 8px;
   margin: 10px;
 }
+
+.clr {
+  clear: both;
+}
+
 
 
 
