--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,14 +15,13 @@
       <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="
         <span class="navbar-toggler-icon"></span>
       </button>
-      <a class="navbar-brand" href="#">Flixter</a>
+      <%= link_to 'Flixter', root_url, class: 'navbar-brand' %>
 
       <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
         <ul class="navbar-nav mr-auto mt-2 mt-md-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
-        </ul>
+        <li class="nav-item">
+        <%= link_to 'See All Courses', courses_path, class: 'nav-link' %>
+      </li>
         <ul class="navbar-nav">
          <% if user_signed_in? %>
           <li class="nav-item">
@@ -50,11 +49,11 @@
     <%= yield %>
    </div>
  
-  <div id="footer"> 
-    <div class="container">
-      <b> Teachers</b>
-      <br />
-      <%= link_to 'Teach a Course', new_instructor_course_path %>
+  <div id="footer">
+  <div class="container">
+    <b>Teachers</b>
+    <br />
+    <%= link_to 'Teach a Course', new_instructor_course_path %>
     </div>
   </div>
   </body>
