--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -7,7 +7,7 @@
   <% @courses.each do |course| %>
     <h2 class="text-center"><%= course.title %></h2>
     <br />
-    <div class="row"
+    <div class="row">
     <div class="col-sm-8 col-12">
       <%= course.description %>
     </div>
