--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -6,8 +6,8 @@
   <br class="clr" />
 
   <div class="text-center">
-    <%= link_to 'Add a new section...', new_instructor_course_section_path(@course), class: 'btn btn_primary btn-lg' %>
-  </div> 
+    <%= link_to 'Add a new section...', new_instructor_course_section_path(@course), class: 'btn btn-primary btn-lg' %>
+  </div>
 
   <ul>
     <% @course.sections.each do |section| %>
@@ -16,5 +16,5 @@
       </li>
     <% end %>
   </ul>
-   
+
 </div>
