--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,6 +1,6 @@
 <div class="booyah-box col-10 offset-1">
   <h1 class="text-center">Learn something today</h1>
-  <%= image_tag @current_course.image.url, class: 'img-fluid' %>
+  <%= image_tag @course.image.to_s, class: 'img-fluid' %>
   <hr />
 
   <% @courses.each do |course| %>
