--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,8 +1,6 @@
 <div class="booyah-box col-10 offset-1">
   <h1 class="text-center">Learn something today</h1>
-  <%= image_tag @course.image.to_s, class: 'img-fluid' %>
   <hr />
-
   <% @courses.each do |course| %>
     <h2 class="text-center">
       <%= link_to course.title, course_path(course) %>
@@ -14,8 +12,10 @@
       </div>
       <div class="col-sm-4 col-12 text-center">
         <%= link_to 'More Details...', course_path(course), class: 'btn btn-primary btn-large' %>
+        <%= image_tag @course.image.url, class: 'img-fluid' %>
       </div>
-    </div>
+    </div
     <br class="clr" />
+    <%= image_tag @course.image.url, class: 'img-fluid' %> 
   <% end %>
 </div>
