--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,8 +2,8 @@
   <h1 class="text-center">Learn something today</h1>
   <hr />
   <% @courses.each do |course| %>
-    <h2 class="text-center">
-      <%= link_to course.title, course_path(course) %>
+    <h2 class="text-center"><%= link_to course.title, course_path(course) %>
+      <%= image_tag @course.image.url, class: 'img-fluid' %>
     </h2>
     <br />
     <div class="row">
@@ -12,10 +12,8 @@
       </div>
       <div class="col-sm-4 col-12 text-center">
         <%= link_to 'More Details...', course_path(course), class: 'btn btn-primary btn-large' %>
-        <%= image_tag @course.image.url, class: 'img-fluid' %>
       </div>
     </div
     <br class="clr" />
-    <%= image_tag @course.image.url, class: 'img-fluid' %> 
   <% end %>
 </div>
