--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -2,9 +2,8 @@
   <h1 class="text-center">Learn something today</h1>
   <hr />
   <% @courses.each do |course| %>
-    <h2 class="text-center"><%= link_to course.title, course_path(course) %>
-      <%= image_tag @course.image.url, class: 'img-fluid' %>
-    </h2>
+    <h2 class="text-center"><%= link_to course.title, course_path(course) %></h2>
+      <%= image_tag course.image.to_s, class: 'img-fluid' %>
     <br />
     <div class="row">
       <div class="col-sm-8 col-12">
