--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,4 +1,6 @@
 @import "bootstrap";
+@import "font-awesome";
+
 
 .navbar {
   font-family: "Helvetica Neue", Helvetica;
@@ -104,10 +106,28 @@ body {
   font-size: 15px;
 }
 
+ul {
+  list-style-type: none;
+}
 
+.section-li {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding: 20px;
+}
 
+ul .header {
+  font-size: 20px;
+}
 
-
+.lessons li {
+  background: black;
+  color: white;
+  margin: 10px;
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 100;
+  padding: 8px;
+}
 
 
 
