--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -67,16 +67,16 @@
         <br />
         <%= link_to 'Careers', '#' %>
         <br />
-        <%= link_to 'Privacy Policy', '#' %>
+        <%= link_to 'Privacy Policy', privacy_path %>
       </div>
-      <div class="col-12 col-sm-3">
+      <div class="col-6 col-sm-3">
         <b>Contact</b>
         <br />
-        my@email.com
+        dggirty@gmail.com
         <br />
-        One Kendall Square
+        3402 Danbury Dr
         <br />
-        Cambridge MA, 02113
+        Amarillo, TX 79109
       </div>
       <div class="col-12 col-sm-3 social">
         <b>Social</b>
